--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,19 +2,43 @@ cmake_minimum_required(VERSION 3.0)
 
 project(crust)
 
+add_compile_definitions(GTEST_DONT_DEFINE_TEST)
+
+# Download and unpack googletest at configure time
+configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
+execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+        RESULT_VARIABLE result
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download)
+if (result)
+    message(FATAL_ERROR "CMake step for googletest failed: ${result}")
+endif ()
+execute_process(COMMAND ${CMAKE_COMMAND} --build .
+        RESULT_VARIABLE result
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download)
+if (result)
+    message(FATAL_ERROR "Build step for googletest failed: ${result}")
+endif ()
+
+# Prevent overriding the parent project's compiler/linker
+# settings on Windows
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+# Add googletest directly to our build. This defines
+# the gtest and gtest_main targets.
+add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
+        ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
+        EXCLUDE_FROM_ALL)
+
 set(CMAKE_CXX_STANDARD 11)
 
-if (MSVC)
-    add_compile_options(/W4 /EHs- /EHc- /GR-)
-else()
-    add_compile_options(-Wall -Wextra -fno-exceptions -fno-rtti)
-endif()
-
 if (NOT MSVC)
+    add_compile_options(-Wall -Wextra -fno-exceptions -fno-rtti)
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -flto")
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb -g3 -fno-omit-frame-pointer -D __DEBUG__")
-endif()
+endif ()
 
 include_directories(include)
 
-add_executable(test test/test.cpp)
+add_executable(test test/raii_checker.hpp test/test.cpp test/tuple.cpp test/slice.cpp test/cmp.cpp test/function.cpp test/enum.cpp)
+target_link_libraries(test gtest_main)
+add_test(NAME test COMMAND test)
