--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,7 +70,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: configure cmake
-        run: cmake -S $GITHUB_WORKSPACE -B ${{runner.workspace}}\build -DCMAKE_BUILD_TYPE=Release
+        run: cmake -S %GITHUB_WORKSPACE% -B ${{runner.workspace}}\build -DCMAKE_BUILD_TYPE=Release
 
       - name: build
         working-directory: ${{runner.workspace}}\build
