improve utility Squashed commit of the following:
commit 5526335e13b74d0e3d4b3e12239570d8e7925010
Author: cytosine <34590769+Cytosine2020@users.noreply.github.com>
Date:   Wed Feb 9 20:28:30 2022 +0800

    marking more constexpr

commit 0b993359d7571c5f773aa896e2c799c7aec2ebcd
Author: cytosine <34590769+Cytosine2020@users.noreply.github.com>
Date:   Wed Feb 9 20:12:28 2022 +0800

    try to implement constexpr panic and assert

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,10 @@ set(CMAKE_CXX_STANDARD 11)
 if (NOT MSVC)
   add_compile_options(-Wall -Wextra -fno-exceptions -fno-rtti)
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} \
-    -ggdb -g3 -fno-omit-frame-pointer -D __DEBUG__")
+    -ggdb -g3 -fno-omit-frame-pointer")
 else ()
   add_compile_options(/W 3 /sdl /EHr /GR-)
-  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Z7 /D__DEBUG__")
+  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Z7")
 endif ()
 
 IF(CMAKE_BUILD_TYPE MATCHES RELEASE)
