fix github workflow

--- a/.github/workflows/test-msvc.yml
+++ b/.github/workflows/test-msvc.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: build
       working-directory: ${{runner.workspace}}\build
-      run: cmake --build . --config ${{matrix.build}} --target test-{{matrix.standard}}
+      run: cmake --build . --config ${{matrix.build}} --target test-${{matrix.standard}}
 
     - name: test
       working-directory: ${{runner.workspace}}\build
-      run: .\${{matrix.build}}\test-{{matrix.standard}}.exe -V
+      run: .\${{matrix.build}}\test-${{matrix.standard}}.exe -V
