--- a/.github/workflows/test-clang.yml
+++ b/.github/workflows/test-clang.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: build
       working-directory: ${{runner.workspace}}/build
-      run: cmake --build . --config ${{matrix.build}} --target test-{{matrix.standard}}
+      run: cmake --build . --config ${{matrix.build}} --target test-${{matrix.standard}}
 
     - name: test
       working-directory: ${{runner.workspace}}/build
-      run: ./test-{{matrix.standard}} -V
+      run: ./test-${{matrix.standard}} -V
