improve destructuring assignemt
Squashed commit of the following:

commit fa20a169ae5031bca4be32bb489bd61b462d36f0
Author: cytosine <34590769+Cytosine2020@users.noreply.github.com>
Date:   Sat Feb 26 00:04:22 2022 +0800

    enable using ignore in tuple destructuring assignments

commit e2dbd27cb0561f0f4e5729df3f7083ad6723c9ff
Author: cytosine <34590769+Cytosine2020@users.noreply.github.com>
Date:   Fri Feb 25 12:15:34 2022 +0800

    minor fix, macro naming fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
 if (NOT MSVC)
   add_compile_options(-Wall -Wextra -fno-exceptions -fno-rtti)
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} \
-    -ggdb -g3 -fno-omit-frame-pointer")
+    -ggdb -g3 -fno-omit-frame-pointer -fprofile-arcs -ftest-coverage")
 else ()
   add_compile_options(/W 3 /sdl /EHr /GR-)
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Z7")
